kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: binhex386/kubernetes-intro
          volumeMounts:
            - mountPath: /app
              name: www
          resources:
            limits:
              cpu: 100m
              memory: 64M
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
      volumes:
        - name: www
          emptyDir: {}
